--- a/app.json
+++ b/app.json
@@ -43,6 +43,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "e036fba4-c171-4905-ac70-1153f7097634"
+      }
     }
   }
 }
